--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,9 @@
     <string name="link_to_the_course">https://practicum.yandex.ru/android-developer/</string>
     <string name="email_developer">putilov0407@gmail.com</string>
     <string name="link_to_the_offer">https://yandex.ru/legal/practicum_offer/</string>
+
+    <string name="nothing_found">Ничего не нашлось</string>
+    <string name="communications_problem1">Проблемы со связью</string>
+    <string name="communications_problem2">Загрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="refresh_button">Обновить</string>
 </resources>
