--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Playlist Maker</string>
     <string name="title">Playlist maker</string>
     <string name="search">Поиск</string>
-    <string name="media">Медиатека</string>
+    <string name="media_library">Медиатека</string>
     <string name="settings">Настройки</string>
 
     <string name="dark_Theme">Темная тема</string>
@@ -27,5 +27,10 @@
     <string name="year">Год</string>
     <string name="genre">Жанр</string>
     <string name="country">Страна</string>
+
+    <string name="nothing_media">Ваша медиатека пуста</string>
+
+    <string name="nothing_playlist">Вы не создали ни одного плейлиста</string>
+    <string name="new_playlist">Новый плейлист</string>
 
 </resources>
